--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -25,6 +25,7 @@ jobs:
       - name: Install dependencis
         run: |
           python -m pip install --upgrade pip
+          pip install -r .\backend\requirements.txt
           pip install pylint
 
       - name: Run Pylint
