--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -25,9 +25,9 @@ jobs:
       - name: Install dependencis
         run: |
           python -m pip install --upgrade pip
-          pip install -r .\backend\requirements.txt
+          pip install -r ./backend/requirements.txt
           pip install pylint
 
       - name: Run Pylint
         run: |
-          pylint ./backend/backend
+          pylint ./backend/backend/api
