--- a/.github/workflows/changed-file-linter.yaml
+++ b/.github/workflows/changed-file-linter.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencis
         run: |
           python -m pip install --upgrade pip
-          pip install -r ./backend/requirements.txt
+          # pip install -r ./backend/requirements.txt
           pip install pylint
 
       - name: Run Pylint on changed files
