--- a/.github/workflows/changed-file-linter.yaml
+++ b/.github/workflows/changed-file-linter.yaml
@@ -16,7 +16,7 @@ jobs:
         id: changed-files
         run: |
           # Get the list of files changed in the pull request, filtering for .js files
-          files_changed=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} -- '*.py')
+          files_changed=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} -- '*.js')
 
           # If no .js files have changed, exit
           if [ -z "$files_changed" ]; then
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencis
         run: |
           python -m pip install --upgrade pip
-          # pip install -r ./backend/requirements.txt
+          pip install -r ./backend/requirements.txt
           pip install pylint
 
       - name: Run Pylint on changed files
